--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
     "@angular/forms": "~11.2.10",
+    "@angular/localize": "~11.2.10",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
